<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jordic.bathtubtest.main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <!-- TEMPERATURE VIEW -->
        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Temperature:"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_below="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="0º"
            style="@style/TextViewStyle"
            />

        <!-- BATH LITERS VIEW -->
        <TextView
            android:id="@+id/litersLabel"
            android:layout_below="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Liters:"
            android:textAppearance="?android:textAppearanceLarge"
            />


        <TextView
            android:id="@+id/litersTextView"
            android:layout_below="@+id/litersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="0"
            style="@style/TextViewStyle"
            />

        <!-- TAP BUTTONS -->

        <LinearLayout
            android:id="@+id/tapsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="50dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/hotTapButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?android:selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:onClick="onHotTapSwitch"
                    android:src="@drawable/hot_tap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="Hot"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/coldTapButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?android:selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:onClick="onColdTapSwitch"
                    android:src="@drawable/cold_tap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="Cold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
